-- update - 2025.11.13

- feat: Centralized update script automatic self-update from GitHub with validation and rollback (enabled by default)
- feat: Centralized update script input validation for paths and configurations (security hardening)
- feat: Centralized update script lock file mechanism to prevent concurrent execution (cron-safe)
- feat: Centralized update script optional validate flag for faster updates (disabled by default)
- feat: Centralized update script versioned backup system (keeps last 3 versions for rollback)
- refactor: Centralized update script now uses SteamCMD native version checking (removed Steam API dependency)
- refactor: Centralized update script now uses Docker native commands for server restarts (removed Pterodactyl API dependency)
- refactor: Centralized update script now finds all containers matching image name regardless of tag/branch
- remove: Centralized update script no longer requires curl, jq, or Pterodactyl API credentials (simpler setup)
- fix: Centralized update script nested command substitution causing corrupted version files and duplicate logs
- fix: Centralized update script argument list overflow from corrupted version file
- fix: Centralized update script argument list overflow when restarting many servers

-- update - 2025.11.12

- feat: Multi-framework support with independent boolean toggles per addon
- feat: Added ModSharp as standalone addon with .NET 9 runtime auto-installation
- feat: Migrated to SwiftlyS2 v2 (standalone, no MetaMod dependency)
- feat: Smart Docker image cleanup in build script (only removes replaced images)
- feat: Centralized gameinfo.gi management preserving all configured addons
- feat: MetaMod load order enforcement (always first after LowViolence)
- feat: SwiftlyS2 load order enforcement (always last before Game csgo for ModSharp compatibility)
- feat: ModSharp + SwiftlyS2 compatibility via automatic load order management